# Generated by Django 6.0.1 on 2026-01-13 09:05

import django.core.validators
import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.CreateModel(
            name='AIDiseaseMonitor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total_detections', models.IntegerField(default=0)),
                ('accurate_detections', models.IntegerField(default=0)),
                ('accuracy_percentage', models.FloatField(default=0, validators=[django.core.validators.MinValueValidator(0), django.core.validators.MaxValueValidator(100)])),
                ('last_updated', models.DateTimeField(auto_now=True)),
                ('model_version', models.CharField(default='1.0', max_length=50)),
            ],
        ),
        migrations.CreateModel(
            name='AIPricePredictor',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('total_predictions', models.IntegerField(default=0)),
                ('accurate_predictions', models.IntegerField(default=0)),
                ('accuracy_percentage', models.FloatField(default=0, validators=[django.core.validators.MinValueValidator(0), django.core.validators.MaxValueValidator(100)])),
                ('last_updated', models.DateTimeField(auto_now=True)),
                ('model_version', models.CharField(default='1.0', max_length=50)),
                ('average_error_percentage', models.FloatField(default=0)),
            ],
        ),
        migrations.CreateModel(
            name='SystemAlert',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255)),
                ('message', models.TextField()),
                ('alert_type', models.CharField(choices=[('maintenance', 'Maintenance'), ('security', 'Security'), ('feature', 'Feature Update'), ('warning', 'Warning'), ('info', 'Information')], max_length=20)),
                ('is_active', models.BooleanField(default=True)),
                ('all_users', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('created_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='created_alerts', to=settings.AUTH_USER_MODEL)),
                ('target_users', models.ManyToManyField(blank=True, related_name='system_alerts', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='SystemReport',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('title', models.CharField(max_length=255)),
                ('report_type', models.CharField(choices=[('user_stats', 'User Statistics'), ('crop_stats', 'Crop Statistics'), ('order_stats', 'Order Statistics'), ('revenue', 'Revenue Report'), ('activity', 'Activity Report')], max_length=50)),
                ('total_users', models.IntegerField(default=0)),
                ('total_farmers', models.IntegerField(default=0)),
                ('total_buyers', models.IntegerField(default=0)),
                ('total_crops_listed', models.IntegerField(default=0)),
                ('total_orders', models.IntegerField(default=0)),
                ('total_revenue', models.FloatField(default=0)),
                ('active_listings', models.IntegerField(default=0)),
                ('content', models.JSONField(default=dict)),
                ('generated_at', models.DateTimeField(auto_now_add=True)),
                ('generated_by', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-generated_at'],
            },
        ),
        migrations.CreateModel(
            name='UserApproval',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('status', models.CharField(choices=[('pending', 'Pending'), ('approved', 'Approved'), ('rejected', 'Rejected')], default='pending', max_length=20)),
                ('documents', models.FileField(blank=True, null=True, upload_to='approvals/')),
                ('reason_for_rejection', models.TextField(blank=True, null=True)),
                ('reviewed_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('reviewed_by', models.ForeignKey(blank=True, null=True, on_delete=django.db.models.deletion.SET_NULL, related_name='reviewed_approvals', to=settings.AUTH_USER_MODEL)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, related_name='approval_request', to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='ActivityLog',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('action', models.CharField(choices=[('login', 'Login'), ('logout', 'Logout'), ('create_crop', 'Create Crop'), ('update_crop', 'Update Crop'), ('delete_crop', 'Delete Crop'), ('place_order', 'Place Order'), ('cancel_order', 'Cancel Order'), ('upload_image', 'Upload Image'), ('send_message', 'Send Message')], max_length=50)),
                ('description', models.TextField(blank=True, null=True)),
                ('ip_address', models.GenericIPAddressField(blank=True, null=True)),
                ('user_agent', models.TextField(blank=True, null=True)),
                ('timestamp', models.DateTimeField(auto_now_add=True)),
                ('user', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='activity_logs', to=settings.AUTH_USER_MODEL)),
            ],
            options={
                'ordering': ['-timestamp'],
                'indexes': [models.Index(fields=['user', '-timestamp'], name='admin_panel_user_id_5f197d_idx'), models.Index(fields=['action', '-timestamp'], name='admin_panel_action_495e34_idx')],
            },
        ),
    ]
